--- a/templates/decrypt_result.html
+++ b/templates/decrypt_result.html
@@ -93,7 +93,7 @@
 
     <footer class="footer mt-auto py-4">
         <div class="container text-center">
-            <p>&copy; 2025 CipherVaultX. All rights reserved.</p>
+            <p>&copy; 2025 CipherVaultX. All rights reserved. Developed by <a href="https://github.com/djontop" target="_blank">Manthan Vasant</a></p>
         </div>
     </footer>
 
