Fixed Progressbar issue

--- a/templates/index.html
+++ b/templates/index.html
@@ -998,7 +998,7 @@
                         loaderBar.style.width = '50%';
                         loaderBar.style.transition = 'width 3s ease-in-out';
                         
-                        setTimeout(() => {s
+                        setTimeout(() => {
                             loaderBar.style.width = '75%';
                             loaderBar.style.transition = 'width 3s ease-in-out';
                             
